...
        self.navigationController?.dismiss(animated: true, completion: nil)
    }

    func refreshList() {
        self.datasource.removeAll()
        var sectionInfo = SectionItem(title: "Basic info")
        sectionInfo.rows.append(NameItem(identifier: "name", title: "Name:", placeHolder: "Patient Name", value: nil))
        self.datasource.append(sectionInfo)

        var sectionQuestion = SectionItem(title: "Questions for diagnose")

        toddSyndromeDisease.factors.map({$0.questions}).map({$0}).forEach { (question) in
            let item = QuestionItem(answer: Answer(question: question, value: false))
...
