...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="h97-y1-VWG" id="TSC-23-5Tt"/>
                            <outlet property="delegate" destination="h97-y1-VWG" id="SeA-M1-3cv"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Diagnostics" id="rAM-IZ-pnU">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Gx3-d7-ja0">
                            <connections>
                                <segue destination="ZQD-2c-p3M" kind="presentation" identifier="create_diagnostic" id="nvM-Pg-wM2"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="SiV-qT-wHY" id="Mbd-DU-iEN"/>
                            <outlet property="delegate" destination="SiV-qT-wHY" id="ggA-mm-QLX"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Diagnosing" id="ZJd-IY-uzW">
                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="cancel" id="KMV-YT-cUV">
                            <connections>
                                <action selector="cancelAction:" destination="SiV-qT-wHY" id="Uea-rJ-138"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="Bf3-iP-eQc">
...
